# Visual-Navigation

./: README.md
lab2/: README.md
lab2/two_drones_pkg/config/: default.rviz
lab2/two_drones_pkg/src/: frames_publisher_node.cpp  plots_publisher_node.cpp
lab3/: .rosinstall  .rosinstall.bak
lab3/controller_pkg/src/: controller_node.cpp
lab5/: README.md
lab5/feature_tracking/: README.md
lab5/feature_tracking/include/: defines.h  feature_tracker.h  lk_feature_tracker.h
lab5/feature_tracking/src/: feature_tracker.cpp  lk_feature_tracker.cpp  orb_feature_tracker.cpp  sift_feature_tracker.cpp  surf_feature_tracker.cpp  track_features.cpp
lab6/: README.md
lab6/include/: lab6_utils.h
lab6/launch/: video_tracking.launch
lab6/python/: visualize.py
lab6/rviz/: office.rviz
lab6/src/: pose_estimation.cpp
lab7/: README.md
lab7/include/: deliverable_2_3.h
lab7/src/: deliverable_1.cpp  deliverable_2_3.cpp  deliverable_4.cpp
lab8/: CMakeLists.txt  README.md  package.xml
lab8/include/: feature_tracker.h  helper_functions.hpp  orb_feature_tracker.h  yolo_detector.h
lab8/launch/: localization.launch
lab8/rviz/: deliverable_2.rviz
lab8/src/: deliverable_2.cpp  feature_tracker.cpp  orb_feature_tracker.cpp  yolo_detector.cpp
orb-slam2/: CMakeLists.txt
orb-slam2/Examples/ROS/ORB_SLAM2/: CMakeLists.txt
orb-slam2/Examples/ROS/ORB_SLAM2/src/: ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
orb-slam2/cmake_modules/: gflags.cmake  glog.cmake
orb-slam2/include/: KeyFrame.h  LoopClosing.h  System.h
orb-slam2/src/: KeyFrameDatabase.cc  LoopClosing.cc  System.cc
pgo/: CMakeLists.txt  package.xml
pgo/include/pgo/: pose_graph.h  utils.hpp
pgo/msg/: OptimizationRequest.msg  OptimizationResult.msg
pgo/src/: pgo.cpp  pose_graph.cpp
