<?xml version="1.0"?>
<package format="2">
  <name>pgo</name>
  <version>0.0.0</version>
  <description>simple pose graph optimization for SLAM and SFM</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="khjune29@gmail.com">alice</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pgo</url> -->


  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gtsam_catkin</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv3_catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_export_depend>gtsam_catkin</build_export_depend> -->
  <!-- <build_export_depend>opencv3_catkin</build_export_depend> -->
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <exec_depend>gtsam_catkin</exec_depend>
  <exec_depend>opencv3_catkin</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->

</package>
